--- a/package.json
+++ b/package.json
@@ -4,19 +4,130 @@
   "description": "This is a simple blog, developed with Node.js + Express + MongoDB + Handlebars as part of my studies in Node.js",
   "main": "app.js",
   "dependencies": {
+    "accepts": "^1.3.8",
+    "array-flatten": "^1.1.1",
+    "asap": "^2.0.6",
+    "balanced-match": "^1.0.2",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "bl": "^2.2.1",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.20.2",
+    "brace-expansion": "^1.1.11",
+    "bson": "^1.1.6",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.5",
+    "concat-map": "^0.0.1",
     "connect-flash": "^0.1.1",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^5.7.2",
-    "passport": "^0.4.0",
-    "passport-local": "^1.1.6"
-
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.3",
+    "debug": "^2.6.9",
+    "define-data-property": "^1.1.1",
+    "define-properties": "^1.2.1",
+    "denque": "^1.5.1",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.3",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.2.2",
+    "glob": "^7.2.3",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "handlebars": "^4.7.8",
+    "has-property-descriptors": "^1.0.1",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "isarray": "^1.0.0",
+    "kareem": "^2.3.2",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mongodb": "^3.7.4",
+    "mongoose": "^5.13.21",
+    "mongoose-legacy-pluralize": "^1.0.2",
+    "mpath": "^0.8.4",
+    "mquery": "^3.2.5",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "neo-async": "^2.6.2",
+    "object-inspect": "^1.13.1",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.5",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "once": "^1.4.0",
+    "optional-require": "^1.0.3",
+    "parseurl": "^1.3.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-to-regexp": "^0.1.7",
+    "pause": "^0.0.1",
+    "process-nextick-args": "^2.0.1",
+    "promise": "^8.3.0",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.11.0",
+    "random-bytes": "^1.0.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readable-stream": "^2.3.8",
+    "regexp-clone": "^1.0.0",
+    "require-at": "^1.0.6",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.1.1",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "sift": "^13.5.2",
+    "sliced": "^1.0.1",
+    "source-map": "^0.6.1",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^2.0.1",
+    "string_decoder": "^1.1.1",
+    "toidentifier": "^1.0.1",
+    "type-is": "^1.6.18",
+    "uglify-js": "^3.17.4",
+    "uid-safe": "^2.1.5",
+    "undici-types": "^5.26.5",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "wordwrap": "^1.0.0",
+    "wrappy": "^1.0.2"
   },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
